--- a/정리/Kubernetes/sources/pod2.yaml
+++ b/정리/Kubernetes/sources/pod2.yaml
@@ -9,3 +9,8 @@ spec:
     ports:
     - containerPort: 80
       protocol: TCP
+
+  - name: ubuntu-sidecar-container
+    image: alicek106/rr-test:curl
+    command: ["tail"]
+    args: ["=f", "/dev/null"]   # 컨테이너가 종료되지 않게 한다.
