--- a/정리/Kubernetes/sources/replicaset.yaml
+++ b/정리/Kubernetes/sources/replicaset.yaml
@@ -3,15 +3,15 @@ kind: ReplicaSet
 metadata:
   name: replicaset-nginx
 spec:
-  replicas: 4
+  replicas: 4   # 갯수설정
   selector:
     matchLabels:
-      app: my-nginx-pods-label # 위는 레플리카셋
+      app: my-nginx-pods-label # 위는 레플리카셋, 라벨셀렉터
   template:                     # 아래는 포드
     metadata:
       name: my-nginx-pod
       labels:
-        app: my-nginx-pods-label
+        app: my-nginx-pods-label # 라벨셀렉터
     spec:
       containers:
       - name: nginx
