--- a/정리/hibernateStudy/pom.xml
+++ b/정리/hibernateStudy/pom.xml
@@ -31,11 +31,6 @@
       <version>1.7.5</version>
     </dependency>
 
-<!--    <dependency>-->
-<!--      <groupId>org.xerial</groupId>-->
-<!--      <artifactId>sqlite-jdbc</artifactId>-->
-<!--      <version>3.30.1</version>-->
-<!--    </dependency>-->
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
@@ -48,12 +43,34 @@
       <version>1.18.10</version>
     </dependency>
 
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+
+<!--    <dependency>-->
+<!--      <groupId>org.mockito</groupId>-->
+<!--      <artifactId>mockito-core</artifactId>-->
+<!--      <version>2.23.4</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
+
+<!--    <dependency>-->
+<!--      <groupId>org.hamcrest</groupId>-->
+<!--      <artifactId>hamcrest-core</artifactId>-->
+<!--      <version>1.3</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
+
+<!--    <dependency>-->
+<!--      <groupId>org.hamcrest</groupId>-->
+<!--      <artifactId>hamcrest-library</artifactId>-->
+<!--      <version>1.3</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
   </dependencies>
 
   <build>
